--- a/ansible/roles/bastion/tasks/main.yml
+++ b/ansible/roles/bastion/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 
-- name: user deployment related tasks
-  include_tasks: users.yml
+- name: User deployment related tasks
+  ansible.builtin.include_tasks: users.yml
   tags: all,users,rootonly
 
-- name: firewall deployment related tasks
-  include_tasks: firewall.yml
+- name: Firewall deployment related tasks
+  ansible.builtin.include_tasks: firewall.yml
   tags: all,firewall
 
-- name: ssh deployment related tasks
-  include_tasks: ssh.yml
+- name: Ssh deployment related tasks
+  ansible.builtin.include_tasks: ssh.yml
   tags: all,ssh
