--- a/ansible/roles/docker/handlers/main.yml
+++ b/ansible/roles/docker/handlers/main.yml
@@ -1,16 +1,16 @@
 ---
 
-- name: restart containerd
+- name: Restart containerd
   ansible.builtin.systemd:
     name: containerd
     state: restarted
 
-- name: restart docker
+- name: Restart docker
   ansible.builtin.systemd:
     name: docker
     state: restarted
 
-- name: restart multipathd
+- name: Restart multipathd
   ansible.builtin.systemd:
     name: multipathd
     state: restarted
