--- a/ansible/roles/filebrowser/tasks/main.yml
+++ b/ansible/roles/filebrowser/tasks/main.yml
@@ -4,10 +4,11 @@
   ansible.builtin.file:
     path: "/tmp/filebrowser"
     state: directory
+    mode: "0755"
 
 - name: Download Filebrowser binary from github
   ansible.builtin.unarchive:
-    src: "https://github.com/filebrowser/filebrowser/releases/download/v{{ fb_version }}/linux-amd64-filebrowser.tar.gz"
+    src: "https://github.com/filebrowser/filebrowser/releases/download/v{{ filebrowser_version }}/linux-amd64-filebrowser.tar.gz"
     dest: "/tmp/filebrowser"
     remote_src: true
 
@@ -17,24 +18,24 @@
     dest: /usr/local/bin/filebrowser
     owner: root
     group: root
-    mode: 0755
+    mode: "0755"
     remote_src: true
 
 - name: Create configuration folder
   ansible.builtin.file:
-    path: "{{ fb_config_dir }}"
-    owner: "{{ fb_user }}"
-    group: "{{ fb_group }}"
-    mode: 0755
+    path: "{{ filebrowser_config_dir }}"
+    owner: "{{ filebrowser_user }}"
+    group: "{{ filebrowser_group }}"
+    mode: "0755"
     state: directory
 
 - name: Deploying configuration file
   ansible.builtin.template:
     src: "settings.json.j2"
-    dest: "{{ fb_config_dir }}/settings.json"
-    owner: "{{ fb_user }}"
-    group: "{{ fb_group }}"
-    mode: 0644
+    dest: "{{ filebrowser_config_dir }}/settings.json"
+    owner: "{{ filebrowser_user }}"
+    group: "{{ filebrowser_group }}"
+    mode: "0644"
   notify: Restart
 
 - name: Deploying service file
@@ -43,12 +44,12 @@
     dest: "/lib/systemd/system/filebrowser.service"
     owner: "root"
     group: "root"
-    mode: 0644
+    mode: "0644"
   notify:
     - Daemon reload
 
 - name: Running handlers for daemon reload
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: Enabling filebrowser service
   ansible.builtin.systemd:
@@ -58,10 +59,10 @@
 
 - name: Create log folder
   ansible.builtin.file:
-    path: "{{ fb_log_dir }}"
+    path: "{{ filebrowser_log_dir }}"
     owner: root
     group: adm
-    mode: 0755
+    mode: "0755"
     state: directory
 
 - name: Deploy rsyslog config
@@ -70,7 +71,7 @@
     dest: /etc/rsyslog.d/filebrowser.conf
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
 
 - name: Deploy logrotate config
   ansible.builtin.copy:
@@ -78,12 +79,12 @@
     dest: /etc/logrotate.d/filebrowser
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
 
 - name: Create custom branding folder
   ansible.builtin.file:
     path: "/etc/filebrowser/branding/img/icons"
-    owner: "{{ fb_user }}"
-    group: "{{ fb_group }}"
-    mode: 0755
+    owner: "{{ filebrowser_user }}"
+    group: "{{ filebrowser_group }}"
+    mode: "0755"
     state: directory
