--- a/ansible/roles/neo4j/handlers/main.yml
+++ b/ansible/roles/neo4j/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: restart neo4j
+- name: Restart neo4j
   ansible.builtin.systemd_service:
     name: neo4j.service
     state: restarted
