--- a/ansible/roles/rabbitmq/tasks/config.yml
+++ b/ansible/roles/rabbitmq/tasks/config.yml
@@ -4,7 +4,7 @@
   ansible.builtin.template:
     src: rabbitmq.conf.j2
     dest: /etc/rabbitmq/rabbitmq.conf
-    mode: 0644
+    mode: "0644"
     owner: rabbitmq
     group: rabbitmq
   notify: Restart Rabbitmq
@@ -14,7 +14,7 @@
   ansible.builtin.template:
     src: rabbitmq-env.conf.j2
     dest: /etc/rabbitmq/rabbitmq-env.conf
-    mode: 0644
+    mode: "0644"
     owner: rabbitmq
     group: rabbitmq
   notify: Restart Rabbitmq
@@ -79,7 +79,7 @@
   community.rabbitmq.rabbitmq_queue:
     login_user: "{{ rabbitmq_admin_username }}"
     login_password: "{{ rabbitmq_admin_password }}"
-    state: "{{ item.state | default('present')}}"
+    state: "{{ item.state | default('present') }}"
     vhost: "{{ item.vhost }}"
     name: "{{ item.name }}"
     durable: "{{ item.durable | default(true) }}"
@@ -93,7 +93,7 @@
   community.rabbitmq.rabbitmq_binding:
     login_user: "{{ rabbitmq_admin_username }}"
     login_password: "{{ rabbitmq_admin_password }}"
-    state: "{{ item.state |default('present') }}"
+    state: "{{ item.state | default('present') }}"
     vhost: "{{ item.vhost }}"
     name: "{{ item.name }}"
     destination: "{{ item.destination }}"
