--- a/ansible/roles/varnish/handlers/main.yml
+++ b/ansible/roles/varnish/handlers/main.yml
@@ -1,22 +1,22 @@
 ---
 
-- name: rsyslogd restart
+- name: Rsyslogd restart
   ansible.builtin.systemd:
     name: rsyslog
     state: restarted
 
-- name: varnish reload
+- name: Varnish reload
   ansible.builtin.systemd:
     name: varnish
     state: reloaded
 
-- name: varnish restart
+- name: Varnish restart
   ansible.builtin.systemd:
     name: varnish
     daemon_reload: true
     state: restarted
 
-- name: varnishncsa restart
+- name: Varnishncsa restart
   ansible.builtin.systemd:
     name: "varnishncsa-{{ item }}"
     daemon_reload: true
