--- a/ansible/roles/varnish/tasks/main.yml
+++ b/ansible/roles/varnish/tasks/main.yml
@@ -1,19 +1,19 @@
 ---
 
-- name: install varnish package
+- name: Install varnish package
   ansible.builtin.apt:
     name: varnish
     state: present
     update_cache: true
   tags: install
 
-- name: hold packages
+- name: Hold packages
   ansible.builtin.dpkg_selections:
     name: "varnish"
     selection: hold
   tags: install
 
-- name: disabled default varnish/varnishcsa service
+- name: Disabled default varnish/varnishcsa service
   ansible.builtin.systemd:
     name: "{{ item }}"
     enabled: false
@@ -23,95 +23,95 @@
     - varnishncsa
   tags: install
 
-- name: ensure ipv4 takes precedence
+- name: Ensure ipv4 takes precedence
   ansible.builtin.lineinfile:
     path: /etc/gai.conf
     line: precedence ::ffff:0:0/96  100
   tags: install
 
-- name: deploy rsyslogd conf
+- name: Deploy rsyslogd conf
   ansible.builtin.copy:
     src: rsyslog.conf
     dest: /etc/rsyslog.d/10-varnishd.conf
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   tags: install
-  notify: rsyslogd restart
+  notify: Rsyslogd restart
 
-- name: deploy logrotate conf
+- name: Deploy logrotate conf
   ansible.builtin.copy:
     src: logrotate.conf
     dest: /etc/logrotate.d/varnishd
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   tags: install
 
-- name: deploy varnishncsa logrotate conf
+- name: Deploy varnishncsa logrotate conf
   ansible.builtin.copy:
     src: logrotatencsa.conf
     dest: /etc/logrotate.d/varnishncsa
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   tags: install
 
-- name: create varnishncsa log dir
+- name: Create varnishncsa log dir
   ansible.builtin.file:
     path: /data/log/web/
     state: directory
     owner: varnishlog
     group: varnish
-    mode: 0750
+    mode: "0750"
   tags: install
 
-- name: deploy custom varnish systemd service file
+- name: Deploy custom varnish systemd service file
   ansible.builtin.template:
     src: varnish.service.j2
     dest: /etc/systemd/system/varnish.service
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   tags: install,config
-  notify: varnish restart
+  notify: Varnish restart
 
-- name: deploy custom varnishncsa systemd service file
+- name: Deploy custom varnishncsa systemd service file
   ansible.builtin.template:
     src: "{{ env }}-varnishncsa-{{ item }}.service.j2"
     dest: "/etc/systemd/system/varnishncsa-{{ item }}.service"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   tags: install,config
-  with_items: "{{ varnishncsa_custom_items }}"
-  notify: varnishncsa restart
+  with_items: "{{ varnish_varnishncsa_custom_items }}"
+  notify: Varnishncsa restart
 
-- name: enabled custom varnish systemd service
+- name: Enabled custom varnish systemd service
   ansible.builtin.systemd:
     name: varnish
     enabled: true
   tags: install
 
-- name: start varnish on install
+- name: Start varnish on install
   ansible.builtin.systemd:
     name: varnish
     state: started
   tags: install
 
-- name: enabled custom varnishncsa services
+- name: Enabled custom varnishncsa services
   ansible.builtin.systemd:
     name: "varnishncsa-{{ item }}"
     enabled: true
-  with_items: "{{ varnishncsa_custom_items }}"
+  with_items: "{{ varnish_varnishncsa_custom_items }}"
   tags: install
 
-- name: deploy varnish config file
+- name: Deploy varnish config file
   ansible.builtin.template:
     src: default.vcl.j2
     dest: /etc/varnish/default.vcl
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   tags: install,config
-  notify: varnish reload
+  notify: Varnish reload
